--- a/Cheatsheets/CSS/sub_projects/project1/styles.css
+++ b/Cheatsheets/CSS/sub_projects/project1/styles.css
@@ -9,7 +9,10 @@ body {
     color: #151412
   }
   
-  main { margin: 24px }
+  main { 
+    margin: 24px;
+    display: grid;
+}
   
   img { 
     float: left; 
